--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.3.9
   firebase_core: ^1.13.1
+  carousel_slider: ^4.0.0
+  sizer: ^2.0.15
   flutter:
     sdk: flutter
 
