--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,14 +27,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  carousel_slider: ^4.0.0
   cloud_firestore: ^3.1.10
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.3.9
   firebase_core: ^1.13.1
-  carousel_slider: ^4.0.0
-  sizer: ^2.0.15
+  firebase_storage: ^10.2.9
   flutter:
     sdk: flutter
+  flutter_admin_scaffold: ^1.1.0
+  image_picker: ^0.8.4+11
+  sizer: ^2.0.15
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_lints: ^1.0.0
